# mytasco-ai-workspace

./: .gitignore  ARCHITECTURE_IMPLEMENTATION.md  ARCHITECTURE_UPDATE_SUMMARY.md  IMPLEMENTATION_STATUS.md  QUICK_REFERENCE.md  README.md  SETUP_AND_DEPLOYMENT.md  START_HERE.md
.github/workflows/: build-push.yml  ci.yml  deploy-dev.yml  infra-plan.yml
docs/: access-control.md  architecture.md  qa-examples.md
frontend/: README.md  app.py  package.json  tailwind.config.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/config/: env.ts
frontend/src/constants/: api-endpoints.ts  routes.ts
frontend/src/hooks/: use-auth.tsx  use-debounce.ts  use-documents.ts
frontend/src/schemas/: document.schema.ts
frontend/src/services/: api-client.ts  auth.service.ts  chat.service.ts  document.service.ts
frontend/src/types/: api.ts  auth.ts  document.ts
frontend/src/utils/: error-handler.ts  formatter.ts
infra/: docker-compose.yml
infra/mock-server/: mock_mytasco_server.js  package.json
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
services/ingestion/: build_index.py  requirements.txt  worker.py
services/ingestion/app/: pipeline.py
services/mytasco-adapter/: README.md  pyproject.toml
services/mytasco-adapter/mytasco_adapter/: __init__.py  client.py
services/mytasco-adapter/mytasco_adapter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
services/orchestrator/: Dockerfile  demo_architecture.py  requirements.txt  test_structure.py
services/orchestrator/app/: main.py
(+48 files in other folders)
