[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mytasco-adapter"
version = "0.1.0"
description = "Thin client SDK gọi COP API của My Tasco (sys/hrm/aiwsp/noti) - dùng chung cho mọi service Python trong repo."
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["mytasco_adapter*"]
